errorprone gradle plugin was added